@@ -7,6 +7,9 @@
 	  src/SDCCsymt.c,
 	  src/SDCCsymt.h:
 	  Experimental __newcall calling convention.
+	* src/z80/peeph.def,
+	  src/z80/peep.c:
+	  Fix peephole rule 49a for Rabbits.
 
 2021-06-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
